[gd_scene load_steps=16 format=3 uid="uid://cq36ufbafffkp"]

[ext_resource type="Script" path="res://levels/template/level.gd" id="1_ns71l"]
[ext_resource type="PackedScene" uid="uid://d14a6shgqe0ex" path="res://player/player.tscn" id="2_fy66g"]
[ext_resource type="Script" path="res://level_components/scripts/ui.gd" id="3_q4p0e"]
[ext_resource type="Script" path="res://level_components/scripts/lights.gd" id="4_g002x"]
[ext_resource type="PackedScene" uid="uid://dax2hei54riu0" path="res://level_components/switch_light.tscn" id="5_v48xu"]
[ext_resource type="PackedScene" uid="uid://100n5i5aamyl" path="res://level_components/finish.tscn" id="5_w0bqn"]
[ext_resource type="AudioStream" uid="uid://cvy0ahja4fa2w" path="res://assets/audio/zapsplat_sound_design_soundscape_long_tranquil_dreamy_drone_very_light_edge_of_suspense_44006.mp3" id="6_2kpj5"]
[ext_resource type="PackedScene" uid="uid://yu4k3b8phwxl" path="res://level_components/light_switch.tscn" id="6_kgx6a"]
[ext_resource type="AudioStream" uid="uid://de4uyk68ll3ry" path="res://assets/audio/switch-8.mp3" id="7_r0sle"]
[ext_resource type="PackedScene" uid="uid://dood6tncwaduc" path="res://level_components/level_block.tscn" id="7_vprcc"]
[ext_resource type="Texture2D" uid="uid://css0hsjh80ps0" path="res://assets/point_light_gradient.png" id="10_3yab8"]
[ext_resource type="Script" path="res://level_components/scripts/background_color.gd" id="10_yeqr1"]

[sub_resource type="Animation" id="Animation_lgrmi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LevelLights/PointLight2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../LevelLights/PointLight2D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../LevelLights/PointLight2D3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Click:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vhlv5"]
resource_name = "slide_transition"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Player:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../LevelLights/PointLight2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../LevelLights/PointLight2D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LevelLights/PointLight2D3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(4.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_level"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Click:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.6, 1.1, 1.7, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uuwds"]
_data = {
"RESET": SubResource("Animation_lgrmi"),
"slide_transition": SubResource("Animation_vhlv5")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_ns71l")
level_name = "1"
shrink_rate = 0.6

[node name="Player" parent="." instance=ExtResource("2_fy66g")]
visible = false
position = Vector2(193, 188)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../UI")
libraries = {
"": SubResource("AnimationLibrary_uuwds")
}

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 2
layer = 2
script = ExtResource("3_q4p0e")

[node name="Label" type="Label" parent="UI"]
visible = false
offset_left = 481.0
offset_top = 6.0
offset_right = 586.0
offset_bottom = 32.0
text = "GAME OVER"

[node name="Control" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
layout_mode = 0
offset_right = 2354.0
offset_bottom = 1478.0
color = Color(0.113725, 0.113725, 0.133333, 1)

[node name="Lights" type="Node2D" parent="."]
script = ExtResource("4_g002x")

[node name="SwitchLight" parent="Lights" node_paths=PackedStringArray("switch") instance=ExtResource("5_v48xu")]
z_index = 2
position = Vector2(909, 165)
color = Color(1, 1, 0.756863, 1)
energy = 4.35
shadow_filter = 1
texture_scale = 2.8
switch = NodePath("../../Switches/LightSwitch")
timer_length = 1.0

[node name="Switches" type="Node2D" parent="."]

[node name="LightSwitch" parent="Switches" instance=ExtResource("6_kgx6a")]
position = Vector2(622, 129)

[node name="LevelGeometry" type="Node2D" parent="."]

[node name="Boundary" type="Node2D" parent="LevelGeometry"]

[node name="LevelBlock" parent="LevelGeometry/Boundary" instance=ExtResource("7_vprcc")]
position = Vector2(50, 350)
size = Vector2(100, 700)

[node name="LevelBlock3" parent="LevelGeometry/Boundary" instance=ExtResource("7_vprcc")]
position = Vector2(1450, 350)
size = Vector2(100, 700)

[node name="LevelBlock2" parent="LevelGeometry/Boundary" instance=ExtResource("7_vprcc")]
position = Vector2(750, 50)
rotation = 1.5708
size = Vector2(100, 1500)

[node name="LevelBlock4" parent="LevelGeometry/Boundary" instance=ExtResource("7_vprcc")]
position = Vector2(750, 650)
rotation = 1.5708
size = Vector2(100, 1500)

[node name="Walls" type="Node2D" parent="LevelGeometry"]

[node name="LevelBlock" parent="LevelGeometry/Walls" instance=ExtResource("7_vprcc")]
position = Vector2(517, 189)
size = Vector2(100, 200)

[node name="LevelBlock2" parent="LevelGeometry/Walls" instance=ExtResource("7_vprcc")]
position = Vector2(743, 103)
size = Vector2(100, 200)

[node name="NoGrows" type="Node2D" parent="."]

[node name="LevelLights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="LevelLights"]
position = Vector2(-454, 423)
energy = 5.5
range_layer_min = -512
range_layer_max = 512
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("10_3yab8")
texture_scale = 3.8

[node name="PointLight2D2" type="PointLight2D" parent="LevelLights"]
position = Vector2(1304, -594)
energy = 5.5
range_layer_min = -512
range_layer_max = 512
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("10_3yab8")
texture_scale = 4.95

[node name="PointLight2D3" type="PointLight2D" parent="LevelLights"]
position = Vector2(1129, 943)
energy = 1.85
range_layer_min = -512
range_layer_max = 512
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("10_3yab8")
texture_scale = 6.25

[node name="Finish" parent="." instance=ExtResource("5_w0bqn")]
position = Vector2(1330, 532)

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColor" type="ColorRect" parent="Background"]
self_modulate = Color(1, 1, 1, 0.494118)
offset_left = -185.0
offset_top = -93.0
offset_right = 1791.0
offset_bottom = 1037.0
color = Color(0.172549, 0.172549, 0.172549, 1)
script = ExtResource("10_yeqr1")

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2kpj5")
volume_db = -23.0
pitch_scale = 0.83
autoplay = true
bus = &"Music"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r0sle")
bus = &"Effects"
